storage/minio/manifests/console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-console
  namespace: minio
  labels:
    app: minio-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-console
  template:
    metadata:
      labels:
        app: minio-console
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: minio-console
                topologyKey: kubernetes.io/hostname
      containers:
        - name: console
          image: zot0213.kro.kr/storage/minio-console:v1.9.1
          ports:
            - containerPort: 9090
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console-ui
  namespace: minio
spec:
  selector:
    app: minio-console
  ports:
    - port: 9090
      targetPort: 9090
      name: http
