storage/minio/manifests/console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - minio.minio0213.kro.kr
    - minio0213.kro.kr
    secretName: minio-console-tls
  rules:
  - host: minio.minio0213.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-console-ui
            port:
              number: 9090
  - host: minio0213.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-console-ui
            port:
              number: 9090
